Codice progetto precedente

--- a/index.html
+++ b/index.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Campo minato DOM</title>
+    <link rel="stylesheet" href="css/style.css">
+    <title>Campo Minato</title>
 </head>
 <body>
-    
+    <main>
+        <div class="game-menu">
+            <h2>Campo Minato</h2>
+            <button id="easy">Easy</button>
+            <button id="medium">Medium</button>
+            <button id="hard">Hard</button>
+        </div>
+
+        <div id="grid"></div>
+    </main>
+
+    <script src="script/script.js"></script>
 </body>
 </html>
